src/test/ui/match/match-unresolved-one-arm.stderr
error[E0282]: type annotations needed
  --> $DIR/match-unresolved-one-arm.rs:4:9
   |
LL |     let x = match () {
   |         ^ consider giving `x` a type

error: aborting due to previous error

For more information about this error, try `dustc --explain E0282`.
